--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1807,7 +1807,8 @@ a {
   text-align: left;
 }
 .cid-rOMrPX7fgA {
-  padding-top: 135px;
+  margin-top: 75px;
+  padding-top: 45px;
   padding-bottom: 45px;
   background-color: #fafafa;
 }
@@ -4121,4 +4122,27 @@ a {
 .cid-tzj5OSbn0L H5 {
   color: #ffffff;
   text-align: left;
+}
+#secondnavbarul li{
+  margin-right: 10px;
+}
+.d-none{
+  display: none;
+}
+
+/* Page content */
+.content {
+  padding: 16px;
+}
+
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 60px;
 }
