--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1739,12 +1739,12 @@ a {
   opacity: 0.05;
 }
 .cid-tzj5OSbn0L .google-map {
-  height: 25rem;
+  /* height: 25rem; */
   position: relative;
 }
 .cid-tzj5OSbn0L .google-map iframe {
-  height: 100%;
-  width: 100%;
+  height: 120%;
+  width: 120%;
 }
 .cid-tzj5OSbn0L .google-map [data-state-details] {
   color: #6b6763;
@@ -1807,7 +1807,7 @@ a {
   text-align: left;
 }
 .cid-rOMrPX7fgA {
-  margin-top: 125px;
+  margin-top: 70px;
   padding-top: 45px;
   padding-bottom: 45px;
   background-color: #fafafa;
@@ -1824,8 +1824,8 @@ a {
 .cid-rOMrQafNyf .block {
   width: 100%;
   height: 400px;
-  background-image: url("../../../assets/images/01.jpg");
-  background-size: 1140px 400px;
+  background-image: url("../../../assets/images/01.png");
+  background-size: 1400px 400px;
   background-position: center;
   display: block;
   animation: scroll 30s infinite linear;
@@ -3426,7 +3426,10 @@ a {
   transition: all .2s;
 }
 .cid-rOMrXbthzz .navbar-dropdown {
-  padding: .5rem 1rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   position: fixed;
 }
 .cid-rOMrXbthzz a.nav-link {
